--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@ neboj sa <hr>
 <strong>a i kdyz se bojis</strong> <hr>
 tak pokracuj! <hr>
 
-
+<p>proc se tam delaji ty carky <hr>
+prijde mi to divne, myslela jsem, ze to je jenom dalsi radek. Bez nejake carky. 
+</p>
 
     </p>
 </body>
