--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ neboj sa <hr>
 <strong>a i kdyz se bojis</strong> <hr>
 tak pokracuj! <hr>
 
+<img src="http://placekitten.com/400/600" alt="kocicak">
+
 <p>proc se tam delaji ty carky <hr>
 prijde mi to divne, myslela jsem, ze to je jenom dalsi radek. Bez nejake carky. 
 </p>
